# collision_free_traj

./: CMakeLists.txt  package.xml
config/: ompl_planning.yaml
include/collision_free_traj/: config.h
launch/: collision_with_moveit.launch  generate_baxter_database_moveit.launch  generate_baxter_database_pure.launch  generate_roadmap_randomly.launch  gripper_control.launch  moveit_test.launch  our_prm_retreive.launch  our_prm_test.launch  plannerdata_retreive.launch  plannerdata_usage.launch  sampling_test.launch  test_baxter_database.launch  test_ikfast.launch  thunderlighting_example.launch
src/: baxter_collision_free.cpp  collision_with_moveit.cpp  complete_algorithm.cpp  generate_baxter_database_moveit.cpp  generate_baxter_database_pure.cpp  generate_roadmap_randomly.cpp  generate_roadmap_randomly_backup.cpp  gripper_control.cpp  mimicking_move_group.cpp  naive_try.cpp  obstacle_avoidance_traj.cpp  refined_baxter_collision_free.cpp  retrieve_our_prm.cpp  retrieve_plannerdata.cpp  test_baxter_database.cpp  test_convex_hull.cpp  test_ikfast.cpp  test_joint_action_left.cpp  test_moveit_baxter.cpp  tests_moveit.cpp  tests_our_prm.cpp  tests_sampling.cpp  thunderlighting_example.cpp  usage_plannerdata.cpp  usage_plannerdata_backup.cpp
